--- a/WebContent/css/login.css
+++ b/WebContent/css/login.css
@@ -1,3 +1,20 @@
+.navbar {
+	width: 100%;
+	background-color: #807979;
+	padding-left: 20px;
+	padding-top: 10px;
+}
+
+.nav-link {
+	color: #fff;
+	font-size: 20px;
+}
+
+.nav-link:hover {
+	color: #fff;
+}
+
+
 #title {
 	margin-top: -10px;	
 }
