Listing users as well as admin login

--- a/WebContent/css/index.css
+++ b/WebContent/css/index.css
@@ -22,6 +22,10 @@
 	margin-left: 85%;
 }
 
+#adminProfileButton {
+	margin-left: 85%;
+}
+
 #logoutButton {
 	margin-top: 30px;
 	margin-left: -50%;
