--- a/WebContent/css/hostProfile.css
+++ b/WebContent/css/hostProfile.css
@@ -3,6 +3,21 @@
 	margin-bottom: 20px;
 }
 
+.table {
+	width: 60%;
+	margin-left: auto;
+	margin-right: auto;
+}
+
+.table tr:hover {
+	background-color: rgba(202, 194, 194, 0.5);
+}
+
+.thead-inverse th {
+    color: #fff;
+    background-color: #373a3c;
+}
+
 .search-section {
 	display: inline;
 }
@@ -18,15 +33,3 @@
 #searchButton {
 	margin-left: 10px;
 }
-
-#amenities {
-	margin-top: 20px;
-	width: 60%;
-	margin-left: auto;
-	margin-right: auto;
-}
-
-
-
-
-
