--- a/WebContent/css/index.css
+++ b/WebContent/css/index.css
@@ -1,19 +1,3 @@
-.navbar {
-	width: 100%;
-	background-color: #807979;
-	padding-left: 20px;
-	padding-top: 10px;
-}
-
-.nav-link {
-	color: #fff;
-	font-size: 20px;
-}
-
-.nav-link:hover {
-	color: #fff;
-}
-
 #loginButton {
 	margin-left: 80%;
 }
@@ -23,6 +7,10 @@
 }
 
 #adminProfileButton {
+	margin-left: 85%;
+}
+
+#hostProfileButton {
 	margin-left: 85%;
 }
 
