--- a/WebContent/css/adminProfile.css
+++ b/WebContent/css/adminProfile.css
@@ -26,7 +26,58 @@
 	margin-right: auto;
 }
 
+#addNewHost {
+	margin-top: 20px;
+	width: 60%;
+	margin-left: auto;
+	margin-right: auto;
+}
 
+#modal-content {
+	width: 500px;
+	height: 1500px;
+}
 
+#username{
+	margin-top: 10px;
+	width: 80%;
+	margin-left: auto;
+	margin-right: auto;
+}
+
+#firstName {
+	margin-top: 10px;
+	width: 80%;
+	margin-left: auto;
+	margin-right: auto;
+}
+
+#lastName {
+	margin-top: 10px;
+	width: 80%;
+	margin-left: auto;
+	margin-right: auto;
+}
+
+#formCheck {
+	margin-top: 10px;
+	width: 80%;
+	margin-left: auto;
+	margin-right: auto;
+}
+
+#password {
+	margin-top: 10px;
+	width: 80%;
+	margin-left: auto;
+	margin-right: auto;
+}
+
+#password2 {
+	margin-top: 10px;
+	width: 80%;
+	margin-left: auto;
+	margin-right: auto;
+}
 
 
