--- a/WebContent/css/apartmentDetails.css
+++ b/WebContent/css/apartmentDetails.css
@@ -10,6 +10,30 @@
     left: 40%;
 }
 
+#activateApartment {
+    position: absolute;
+    top: 30px;
+    left: 70%;
+}
+
+#deleteApartment {
+    position: absolute;
+    top: 30px;
+    left: 85%;
+}
+
+#editApartment {
+    position: absolute;
+    top: 80px;
+    left: 85%;
+}
+
+#rentRequest {
+    position: absolute;
+    top: 30px;
+    left: 80%;
+}
+
 #apartmentType {
     position: absolute;
     top: 100px;
@@ -78,4 +102,19 @@ img {
 .datesContainer {
     margin-top: 30px;
     font-size: 16px;
+}
+
+#numberOfNights {
+    width: 80%;
+    margin: 5px auto;
+}
+
+#message {
+    width: 80%;
+    margin: 5px auto;
+}
+
+#date {
+    width: 80%;
+    margin: 5px auto;
 }
