--- a/WebContent/css/adminProfile.css
+++ b/WebContent/css/adminProfile.css
@@ -1,3 +1,7 @@
+#headline {
+	margin-top: -30px;
+}
+
 #apartmentsButton {
 	margin-left: 85%;
 }
@@ -84,4 +88,7 @@
 	margin-right: auto;
 }
 
-
+#reservations {
+	margin-top: 20px;
+	margin-bottom: 10px;
+}
