--- a/WebContent/css/profile.css
+++ b/WebContent/css/profile.css
@@ -1,3 +1,12 @@
+#pendingReservations {
+	margin-top: -30px;
+	margin-bottom: 50px;
+}
+
+#details {
+	margin-top: 200px;
+	margin-bottom: 50px;
+}
 .form {
     width: 40%;
     margin-left: auto;
