--- a/WebContent/css/adminProfile.css
+++ b/WebContent/css/adminProfile.css
@@ -89,6 +89,11 @@
 }
 
 #reservations {
-	margin-top: 20px;
-	margin-bottom: 10px;
+	margin-top: 100px;
+	margin-bottom: 50px;
+}
+
+#comments {
+	margin-top: 100px;
+	margin-bottom: 50px;
 }
