Sorting and filtering

--- a/WebContent/css/adminProfile.css
+++ b/WebContent/css/adminProfile.css
@@ -97,3 +97,41 @@
 	margin-top: 100px;
 	margin-bottom: 50px;
 }
+
+
+.sorting {
+	width: 60%;
+	height: 50px;
+	margin: 10px auto;
+	position: relative;
+}
+
+#criteria {
+	width: 20%;
+	position: absolute;
+	top: 5px;
+	left: 65%;
+}
+
+#sort {
+	position: absolute;
+	top: 5px;
+	left: 90%;
+	width: 90px;
+	background-color: rgba(2, 117, 216, 0.9);
+}
+
+#filter-select {
+	width: 20%;
+	position: absolute;
+	top: 5px;
+	left: 5px;
+}
+
+#filter {
+	position: absolute;
+	top: 5px;
+	left: 25%;
+	width: 90px;
+	background-color: rgba(2, 117, 216, 0.9);
+}
